Wk6 still not working
