# server.js
@@ -1,17 +1,27 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./db/connect');
+const swagger = require('./routes/swagger');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('./swagger.json');
 
 const port = process.env.PORT || 8080;
 const app = express();
 
 app
+  .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
   .use(bodyParser.json())
   .use((req, res, next) => {
-    res.setHeader('Access-Control-Allow-Origin', '*');
-    next();
+      // res.setHeader('Access-Control-Allow-Origin', '*');
+      res.setHeader(
+          'Access-Control-Allow-Headers',
+          'Origin, X-Reqested-With, Content-Type, Accept, Z-Key'
+      );
+      res.setHeader('Content-Type', 'application/json');
+      res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
+      next();
   })
-  .use('/', require('./routes'));
+  .use('/', require('./routes'))
 
 process.on('uncaughtException', (err, origin) => {
   console.log(process.stderr.fd, `Caught exception: ${err}\n` + `Exception origin: ${origin}`);
